add buttons to tinymce and h2 and h3 styling to style.css

--- a/themes/danielwiener/style.css
+++ b/themes/danielwiener/style.css
@@ -118,6 +118,17 @@ h1,h2,h3,h4,h5,h6 {
 h1 {
 	font-size: 32px;
 }
+
+h2 {
+	font-size: 26px;
+	letter-spacing: .05em;
+	text-transform: uppercase;
+}
+h3 {
+	font-size: 22px;
+	letter-spacing: .04em;
+	text-transform: uppercase;
+}
 hr {
 	background-color: #ccc;
 	border: 0;
