--- a/themes/danielwiener/style.css
+++ b/themes/danielwiener/style.css
@@ -744,7 +744,87 @@ h1.widget-title {
 /* Search widget */
 #searchsubmit {
 	display: none;
+}  
+
+/* =Subfooter
+----------------------------------------------- */
+
+#subfooter {
+background-color: #908F82;
+display: block;
+border-top: 1px solid #666;
+clear: both;
 }
+
+#subfooter p {
+font-size: 13px;
+letter-spacing: 1px;
+line-height: 20px;
+}
+
+#subfooter ul{
+font-size: 13px;
+letter-spacing: 1px;
+list-style: none;
+margin: 0;
+padding: 0 0 0 30px;
+/*border: 1px solid red;*/
+}
+
+#subfooter li{
+padding: 0 8px 5px 0;
+margin: 0px;
+line-height: 18px;
+/*border: 1px solid red;*/
+}
+
+#subfooter a{
+text-decoration: none;
+color: #006600;
+}
+
+#subfooter a:hover{
+text-decoration: none;
+color: #000;
+}
+
+#subfooter #subfooter_page {
+margin: 0 auto;
+width: 85%;
+padding: 0px;
+padding-top: 10px;
+display: block;
+text-align: left;
+/* border: 1px solid #eee; */
+}
+
+#subfooter .column1 {
+width: 32%;
+float:left;
+}
+
+#subfooter .column1 h1 {
+padding: 5px 0 5px 5px;
+margin: 0px;
+font-size: 25px;
+font-weight: normal;
+letter-spacing: 2px;
+/*background-color: #ccc;
+border: 1px solid #000;
+width: 300px;*/
+}
+
+#subfooter .column1 h2 {
+padding: 5px 0 0 30px;
+margin: 0px;
+font-size: 16px;
+}
+
+#subfooter .column1 p {
+padding: 0px 20px 10px 30px;
+margin: 0px;
+}
+
 
 /* =Footer
 ----------------------------------------------- */  
