creating previous next links for Exhibits

--- a/themes/danielwiener/style.css
+++ b/themes/danielwiener/style.css
@@ -130,7 +130,7 @@ h3 {
 	text-transform: uppercase;
 }
 hr {
-	background-color: #ccc;
+	background-color: #CC0000;
 	border: 0;
 	height: 1px;
 	margin-bottom: 1.5em;
