--- a/themes/danielwiener/style.css
+++ b/themes/danielwiener/style.css
@@ -49,6 +49,12 @@ html {
 }
 body {
 	background: #DDD url(images/drawing3.jpg) repeat fixed 0px -250px;
+	/*background: #DDD url(images/faces02.jpg) no-repeat fixed 0px -150px;*/
+	  /*-webkit-background-size: cover;
+	  	  -moz-background-size: cover;
+	  	  -o-background-size: cover;
+	  	  background-size: cover;*/
+
 	}
 }
 article,
@@ -739,12 +745,22 @@ object {
 }
 #content .nav-previous {
 	float: left;
-	width: 50%;
+	width: 33%;
+}
+#content .nav-middle {
+	float: left;
+	width: 32%;
+	border: 1px solid red;
 }
 #content .nav-next {
 	float: right;
 	text-align: right;
-	width: 50%;
+	width: 33%;
+}
+
+.single-artworks .site-navigation img {
+	max-width: 65px;
+	max-height: 65px;
 }
 
 /* =Comments
@@ -909,3 +925,11 @@ div.site-info {
 		overflow: hidden;
 		display: block;
 	}
+	
+/* =Resume DW
+-------------------------------------------------------------- */
+
+#resume ul {
+	list-style: none;
+	margin: 0 0 0 0;
+}
