--- a/themes/danielwiener/layouts/content-sidebar.css
+++ b/themes/danielwiener/layouts/content-sidebar.css
@@ -7,7 +7,7 @@ Layout: Content-Sidebar
 	float: left;
 	margin: 0 -27% 0 0;
 	width: 100%;
-	border: 1px solid #444444; 
+/*	border: 1px solid red; */
 }
 #content {
 	margin: 0 8% 0 8%;
@@ -18,14 +18,14 @@ Layout: Content-Sidebar
 	float: right;
 	overflow: hidden;
 	width: 23%;
-	background-color: rgba(220, 220, 222, 0.8); 
-	border: 1px solid black;
+	/*background-color: rgba(220, 220, 222, 0.8); */
+	/*border: 1px solid black;*/
    /* opacity: 0.8;
    	-moz-opacity: 0.8;
    	filter:alpha(opacity=0.8);*/ 
-	-moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+/*	-moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
 	 	-webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-	 	box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+	 	box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);*/
 	padding: 10px 0 0 10px;
 	
 }
